# QExtra

./: CMakeLists.txt
include/QExtra/: macro_qt.hpp
include/kstore/qt/: meta_list_model.hpp  qunion_list_model.hpp
src/: async.cpp  async.cppm  bindable.cppm  global_static.cpp  global_static.cppm  helper.cppm  kstore.cppm  mod.cppm  qml_network.cpp  qml_network.cppm  qobject_bindable_property_p.cppm  qt.cppm  query.cpp  query.cppm  select_storage.cpp  select_storage.cppm
src/asio/: context.cpp  context.cppm  executor.cppm  forward.cppm  mod.cpp  mod.cppm  task.cppm  watch_dog.cppm  watcher.cppm
src/kstore/: gadget_model.cpp  meta_list_model.cpp  moc.cpp  qunion_list_model.cpp
test/: CMakeLists.txt
